--- a/src/scss/about/_worker.scss
+++ b/src/scss/about/_worker.scss
@@ -1,4 +1,101 @@
 .worker {
+  &__info {
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
+    font-weight: 400;
+    margin-top: 24px;
+    text-align: center;
+  }
 
+  &__name {
+    font-size: 15px;
+    letter-spacing: 6px;
+    margin-bottom: 11px;
+  }
 
+  &__position {
+    font-size: 12px;
+    letter-spacing: 4.8px;
+  }
+
+  &__skills {
+    padding: 40px;
+    color: #fff;
+    background-color: #131313;
+    height: 100%;
+    transform: rotateY(180deg);
+  }
+  &__skills-title {
+    color: #ffffff;
+    font-family: 'Dosis', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5.4px;
+  }
+
+  &__skills-text {
+    color: rgba(#fff, 0.5);
+    margin: 25px 0 35px 0;
+    line-height: 21px;
+  }
+
+  &__skills-list-item-name {
+    display: block;
+    color: rgba(#fff, 0.9);
+    font-size: 11px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2.2px;
+    margin-bottom: 6px;
+  }
+
+  &__skills-list-item {
+    & + & {
+      margin-top: 20px;
+    }
+  }
+
+  &__skills-list-item-progress-bar {
+    position: relative;
+    width: 100%;
+    height: 12px;
+    background-color: rgba(255, 255, 255, 0.15);
+  }
+
+  &__skills-list-item-progress {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 11px;
+    background-color: rgba(255, 255, 255, 0.75);
+  }
+
+  &__photo {
+    position: relative;
+    height: 450px;
+    perspective: 2000px;
+
+    &:hover {
+      .worker__container-for-flip--front {
+        transform: rotateY(180deg);
+      }
+
+      .worker__skills {
+        transform: rotateY(360deg);
+      }
+    }
+  }
+
+  &__container-for-flip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    transition: all .8s ease;
+
+    &--front {
+
+    }
+  }
 }
