--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "about/about-all";
 @import "lets-talk/lets-talk";
 @import "header/all";
+@import "services/services";
 
 //@import "section/section";
 
