--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -141,12 +141,48 @@ strong {
 .btn {
   display: inline-block;
   color: #111;
-  background-color: #cfcfcf;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 2.8px;
-  padding: 14px 40px;
   border-radius: 2px;
+
+  &--default {
+    background-color: #cfcfcf;
+    padding: 13px 40px;
+  }
+  &--large {
+    padding: 13px 40px;
+  }
+  &--small {
+    padding: 8px 15px;
+  }
+}
+
+.title {
+  color: #111111;
+  font-family: 'Dosis', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 9px;
+}
+
+.text {
+  line-height: 26px;
+}
+
+
+
+.author {
+  font-size: 11px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.text-lg {
+  font-size: 24px;
+  line-height: 38px;
+  margin-bottom: 32px;
 }
