--- a/src/scss/about/_about.scss
+++ b/src/scss/about/_about.scss
@@ -5,30 +5,7 @@
   & .row + .row {
     margin-top: 108px;
   }
-
-  &__text {
-    line-height: 26px;
-  }
-
-  &__title {
-    color: #111111;
-    font-family: 'Dosis', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 9px;
+  & .title {
     margin-bottom: 75px;
-  }
-
-  &__author {
-    font-size: 11px;
-    font-weight: 400;
-    text-transform: uppercase;
-  }
-
-  &__text-lg {
-    font-size: 24px;
-    line-height: 38px;
-    margin-bottom: 32px;
   }
 }
