--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "lets-talk/lets-talk";
 @import "header/all";
 @import "services/services";
+@import "news/news";
 
 //@import "section/section";
 
