--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,9 @@
 @import "lets-talk/lets-talk";
 @import "header/all";
 @import "services/services";
+@import "portfolio/portfolio";
+@import "start/start";
+@import "choose/choose";
 @import "news/news";
 
 //@import "section/section";
