--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,7 +8,7 @@ $mobile: 480px;
 $black: #141615;
 $green: #30595a;
 $lemon: #7f804c;
-$bg-gray: #fafafa;
+$bg-gray: #f8f8f8;
 $bg-black: #263238;
 $grey: #eee;
 
