--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "start/start";
 @import "choose/choose";
 @import "news/news";
+@import "footer/footer";
 
 //@import "section/section";
 
