--- a/src/scss/about/_worker.scss
+++ b/src/scss/about/_worker.scss
@@ -91,8 +91,16 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     backface-visibility: hidden;
     transition: all .8s ease;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
     &--front {
 
