--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import "portfolio/portfolio";
 @import "start/start";
 @import "choose/choose";
+@import "say/say";
 @import "news/news";
 @import "footer/footer";
 
