--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "choose/choose";
 @import "say/say";
 @import "news/news";
+@import "contact/contact";
 @import "footer/footer";
 
 //@import "section/section";
