--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -389,7 +389,7 @@
     max-width: 25%;
   }
   .col-lg-4 {
-    flex: 0 0 33.333333%;
+    flex: 0 0 +33.333333%;
     max-width: 33.333333%;
   }
   .col-lg-5 {
@@ -551,7 +551,11 @@
   .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%;
+    &:not(:nth-child(-n+2)) {
+      margin-top: 40px;
+    }
   }
+
   .col-md-7 {
     flex: 0 0 58.333333%;
     max-width: 58.333333%;
@@ -733,6 +737,10 @@
   .col-sm-12 {
     flex: 0 0 100%;
     max-width: 100%;
+
+    &:not(:nth-child(-n+1)) {
+      margin-top: 40px;
+    }
   }
   .order-sm-first {
     order: -1;
