--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "news/news";
 @import "newsletter/newsletter";
 @import "contact/contact";
+@import "map/map";
 @import "footer/footer";
 
 //@import "section/section";
