--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -32,7 +32,7 @@
   }
 
   &__info {
-    width: 930px;
+    max-width: 930px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
