--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -36,6 +36,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .section-default {
   padding: 140px 0;
+
+  @include laptop {
+    padding: 100px 0;
+  }
+  @include tablet {
+    padding: 60px 0;
+  }
 }
 
 .link-decor-on-hover {
@@ -204,4 +211,17 @@ strong {
   font-size: 24px;
   line-height: 38px;
   margin-bottom: 32px;
+
+  @include laptop {
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 24px;
+  }
+
+  @include laptop {
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 16px;
+  }
+
 }
