--- a/src/scss/portfolio/_portfolio.scss
+++ b/src/scss/portfolio/_portfolio.scss
@@ -39,6 +39,11 @@
     padding: 2px;
     max-width: 33.333333%;
     flex: 0 0 33.333333%;
+
+    @include tablet {
+      max-width: 50%;
+      flex: 0 0 50%;
+    }
   }
 
   &__img {
