--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -41,7 +41,13 @@ h1, h2, h3, h4, h5, h6 {
     padding: 100px 0;
   }
   @include tablet {
+    padding: 80px 0;
+  }
+  @include mobile-large {
     padding: 60px 0;
+  }
+  @include mobile {
+    padding: 40px 0;
   }
 }
 
@@ -149,6 +155,10 @@ strong {
   margin-bottom: auto;
 }
 
+.d-none {
+  display: none;
+}
+
 .btn {
   display: inline-block;
   color: #111;
@@ -193,6 +203,11 @@ strong {
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 9px;
+
+  @include mobile {
+    font-size: 17px;
+    letter-spacing: 4px;
+  }
 }
 
 .text {
