--- a/src/scss/choose/_choose.scss
+++ b/src/scss/choose/_choose.scss
@@ -10,6 +10,13 @@
   &__title {
     margin-bottom: 88px;
 
+    @include mobile-large {
+      margin-bottom: 50px;
+    }
+
+    @include mobile {
+      margin-bottom: 30px;
+    }
   }
 
   &__card-icon {
@@ -28,6 +35,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    @include mobile-large {
+      margin: 16px 0;
+    }
   }
   
   &__card-desc {
