--- a/src/scss/footer/_footer.scss
+++ b/src/scss/footer/_footer.scss
@@ -1,6 +1,13 @@
 .footer {
   padding: 140px 0 58px 0;
 
+  @include laptop {
+    padding: 110px 0 50px 0;
+  }
+  @include tablet {
+    padding: 80px 0 40px 0;
+  }
+
   &__container {
     max-width: 250px;
     padding: 0 15px;
