--- a/src/scss/services/_services.scss
+++ b/src/scss/services/_services.scss
@@ -2,7 +2,7 @@
 
   &__tabs-list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     margin-bottom: 78px;
     margin-top: 120px;
 
@@ -19,6 +19,32 @@
     @include mobile-large {
       margin-top: 40px;
       margin-bottom: 30px;
+    }
+  }
+
+  &__list-item {
+    width: 20%;
+
+    @include mobile-large {
+      width: 33.3333%;
+    }
+
+    @include mobile {
+      width: 50%;
+
+      &:not(:nth-child(-n + 2)) {
+
+        @include mobile {
+          margin-top: 20px;
+        }
+      }
+    }
+
+    &:not(:nth-child(-n + 3)) {
+
+      @include mobile-large {
+        margin-top: 20px;
+      }
     }
   }
 
@@ -56,7 +82,7 @@
 
     @include tablet {
       font-size: 13px;
-      letter-spacing: 4px;
+      letter-spacing: 3px;
     }
   }
 }
